--- a/simple_experiment/Feedback.html
+++ b/simple_experiment/Feedback.html
@@ -28,13 +28,46 @@ let dRT          = document.createElement("input");
 	dRT.id           = 'dRTFeedback';
 	dRT.value        = '';
 
+let sFeedback        	 = document.createElement("input");
+	sFeedback.type       = 'hidden';
+	sFeedback.name       = 'sFeedback';
+	sFeedback.id         = 'sFeedback';
+	sFeedback.value      = '';
+
+let sTimeFeedback   	  = document.createElement("input");
+	sTimeFeedback.type    = 'hidden';
+	sTimeFeedback.name    = 'sTimeFeedback';
+	sTimeFeedback.id      = 'sTimeFeedback';
+	sTimeFeedback.value   = '';
+
+var mouseenterTimeFeedback = 0;
+var fixationsFeedback = [];
+var orderFeedback = [];
 var TStart       = new Date().getTime();
 var TEnd         = new Date().getTime();
 
 treatment = js_vars.treatment // Load Treatment
 
+function recordButtons(event,string) {
+  let currentTime = new Date();
+  if (event.type === 'mouseenter') {
+        mouseenterTimeFeedback = currentTime.getTime();
+        console.log('mouseenterTime in '+ string+ ' was:' + mouseenterTimeFeedback);
+    } else if (event.type === 'mouseleave') {
+        var mouseoverTimeFeedback = currentTime.getTime() - mouseenterTimeFeedback;
+        console.log('mouseover time was: ' + mouseoverTimeFeedback);
+        fixationsFeedback = fixationsFeedback + ';' + mouseoverTimeFeedback;
+        orderFeedback = orderFeedback + ';' + string;
+        console.log(fixationsFeedback, orderFeedback);
+    } 
+}
+
+
   // When page is loaded
 document.addEventListener("DOMContentLoaded", function() {
+	console.log('Loading info');
+	console.log(treatment);
+
     let body = document.getElementById('game-container');
     InitializeVT(body);                                                 // Initialize visual tracing
     hideEverything();                                                   // Hide Everything at the beginning                     
@@ -45,56 +78,63 @@ document.addEventListener("DOMContentLoaded", function() {
 	showFeedback();      										        // Resize the text of all overflown buttons
 
 	function resizeButtons() {
-    lButtons = document.getElementsByClassName('game-btn');
-    for (let i=0; i<lButtons.length; i++) {
-        adjustText(lButtons[i]);
-        };
+		lButtons = document.getElementsByClassName('game-btn');
+		for (let i=0; i<lButtons.length; i++) {
+			adjustText(lButtons[i]);
+			};
     };
 
 	function adjustText(elem) {
-    let ratioWidth = elem.clientWidth/elem.scrollWidth;
-    let ratioHeight = elem.clientHeight/elem.scrollHeight;
-    // Set initial scale as 100%
-    if (ratioWidth<1 || ratioHeight<1) {
-        let ratio = Math.floor(100*Math.min(ratioWidth,ratioHeight))-1
-        elem.style.fontSize = `${ratio}%`;
-        console.log(`Resized ${elem.id} to ${ratio}%`);
-        };                                  
+		let ratioWidth = elem.clientWidth/elem.scrollWidth;
+		let ratioHeight = elem.clientHeight/elem.scrollHeight;
+		// Set initial scale as 100%
+		if (ratioWidth<1 || ratioHeight<1) {
+			let ratio = Math.floor(100*Math.min(ratioWidth,ratioHeight))-1
+			elem.style.fontSize = `${ratio}%`;
+			console.log(`Resized ${elem.id} to ${ratio}%`);
+			};                                  
     };
 
-	console.log('Loading info');
-    let OtreeBody     = document.getElementsByClassName("_otree-content")[0];
-    OtreeBody.appendChild(dRT);
-	OtreeBody.appendChild(l); // append likes
-	OtreeBody.appendChild(d); // apend dislikes
-	OtreeBody.appendChild(sButtonClick);
-	OtreeBody.appendChild(sTimeClick);
-	console.log(treatment);
+	// END FUNCTION: LOCAL COUNTERS WRITTEN IN THE DATABASE
+    let post = document.getElementById("end");
+    post.addEventListener("click", function(event) {
+		sFeedback.value  = orderFeedback;
+        sTimeFeedback.value = fixationsFeedback;
+        console.log('End button was pressed');
+    });
 
 	function showFeedback() {
-	let x = document.getElementById('btnD');
-	let c = document.getElementById('btnL');
-	if (js_vars.treatment=='Control') {
-        x.style.visibility = 'hidden';  //for control treatment we don't show amount of dislikes
-	} else if (js_vars.treatment=='Emotional') { 
-        c.style.visibility = 'hidden';  //for emotional treatment we don't show the amount of likes
-	} else {
-		x.style.visibility = 'visible';
-		c.style.visibility = 'visible';
-	}};   
+		let x = document.getElementById('btnD');
+		let c = document.getElementById('btnL');
+		if (js_vars.treatment=='Control') {
+			x.style.visibility = 'hidden';  //for control treatment we don't show amount of dislikes
+		} else if (js_vars.treatment=='Emotional') { 
+			c.style.visibility = 'hidden';  //for emotional treatment we don't show the amount of likes
+		} else {
+			x.style.visibility = 'visible';
+			c.style.visibility = 'visible';
+	}};   	
+
+    let OtreeBody     = document.getElementsByClassName("_otree-content")[0];
+    OtreeBody.appendChild(dRT);
+	OtreeBody.appendChild(l); 				// append likes
+	OtreeBody.appendChild(d); 				// apend dislikes
+	OtreeBody.appendChild(sFeedback);
+	OtreeBody.appendChild(sTimeFeedback);
  });
+
 </script>
 {% endblock %}
 
 {% block content %}
 
 <div class="game-container">
-	<button type="button" class="game-btn btn-outcome r0 c0" id="btnL"> 
+	<button type="button" class="game-btn btn-outcome r0 c0" id="btnL" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)"> 
 		<div class="btn-content"> <label id="iLikes" value="{{l}}">{{l}}</label>  <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span> <br> people out of 40 <br> liked your post  </div>
 		<div class="btn-hidden">  </div>
 	</button> 
 	<div class="break"> </div>
-	<button type="button" class="game-btn btn-outcome r1 c0" id="btnD">
+	<button type="button" class="game-btn btn-outcome r1 c0" id="btnD" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)">
 		<div class="btn-content"> <label id="iDislikes" value="{{d}}">{{d}}</label> <span style="font-size:100%; color:rgb(128, 18, 18);">&#128148;</span> <br> people out of 40 <br> <b>did not</b> like <br> your post</div>
 		<div class="btn-hidden">  </div>
 	</button>  
@@ -103,11 +143,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <br><br>
 
 <div class="centered">
-	<button class="btn btn-primary">Continue </button> 
+	<button class="btn btn-primary" id="end">Continue </button> 
 </div>
-
-
-
 
 {% endblock %}
 
