added questionnaire, fixed instructions

--- a/_templates/Instructions/slide3.html
+++ b/_templates/Instructions/slide3.html
@@ -20,7 +20,7 @@
             <div class="btn-hidden"> Hover me! </div>
         </button> 
         <p class="text-reveal" id="reveal">
-            You can now move to the next slide.
+            Nice :D
         </p>
     </div>
 </div>
